finalized search in websocketendpoint, fixed post.java